--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,8 @@
 body{
   font-family: 'Abhaya Libre', serif;
+  font-weight: bold;
+  color: #fff;
+}
+.container {
+  background: red url("/assets/img/bacon-burger.png") no-repeat center center;
 }
